# draw-things-community

./: .bazelrc  .bazelrc.darwin  .bazelrc.linux  .gitignore  AGENTS.md  BUILD  Package.resolved  Package.swift  README.md  SYNCLIST  WORKSPACE  WORKSPACE.darwin  WORKSPACE.linux  custom_patch_with_metadata.patch  force_sync.sh  temp_diff.patch
Libraries/MediaGenerationKitPy/: .gitignore  AGENTS.md  README.md  pyproject.toml
Libraries/MediaGenerationKitPy/examples/: cloud_generate.py  remote_generate.py
Libraries/MediaGenerationKitPy/src/media_generation_kit/: __init__.py  backend.py  catalog.py  cloud.py  configuration.py  enums.py  environment.py  errors.py  flatbuffer.py  image_codec.py  input.py  pipeline.py  remote.py  result.py  states.py  tensor.py
Libraries/MediaGenerationKitPy/tests/: test_core.py
Vendors/ZIPFoundation/: BUILD.bazel  Package.swift  Package@swift-4.0.swift  Package@swift-4.1.swift  Package@swift-4.2.swift
Vendors/ZIPFoundation/Sources/ZIPFoundation/: Archive+BackingConfiguration.swift  Archive+Helpers.swift  Archive+MemoryFile.swift  Archive+Progress.swift  Archive+Reading.swift  Archive+ReadingDeprecated.swift  Archive+Writing.swift  Archive+WritingDeprecated.swift  Archive+ZIP64.swift  Archive.swift  Data+Compression.swift  Data+CompressionDeprecated.swift  Data+Serialization.swift  Entry+Serialization.swift  Entry+ZIP64.swift  Entry.swift  FileManager+ZIP.swift  URL+ZIP.swift
Vendors/ZIPFoundation/Tests/: LinuxMain.swift
Vendors/ZIPFoundation/Tests/ZIPFoundationTests/: ZIPFoundationArchiveTests+ZIP64.swift  ZIPFoundationTests.swift  (+15 more)
(+712 files in other folders)
